--- a/css/styles.css
+++ b/css/styles.css
@@ -1,431 +1,14 @@
-:root {
-  --first-logo-color: #2196f3;
-  --last-logo-color: #000000;
-  --primery-text-color: #757575;
-  --link-text-color: #212121;
-  --secondary-text-color: #ffffff;
-  --accent-color: #2196f3;
-  --hero-footer-dg-color: #2f303a;
-  --section-dg-color: #f5f4fa;
-  --card-set-gap: 30px;
-  --transition-time: 250ms;
-  --transition-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.03em;
-  color: var(--primery-text-color);
-  background-color: #ffffff;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h5 {
-  margin: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-button {
-  cursor: pointer;
-}
-img {
-  display: block;
-}
-
-.list {
-  list-style: none;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 /*--------styles header----------*/
 
-.header {
-  border-bottom: 1px solid #ececec;
-}
-.header-container {
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  color: var(--first-logo-color);
-}
-.header-logo > span {
-  color: #000000;
-}
-.header-logo {
-  margin-right: 93px;
-}
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-.header-item:not(:last-child) {
-  margin-right: 50px;
-}
-.header-list {
-  display: flex;
-}
-.nav-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--link-text-color);
-  display: block;
-  position: relative;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition-property: color;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-}
-.current {
-  color: var(--accent-color);
-}
-.current::after {
-  content: "";
-  display: flex;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  position: absolute;
-  bottom: 0;
-  border-radius: 2px;
-}
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-}
-
-.header-contacts.list {
-  display: flex;
-  margin-left: auto;
-}
-.header-contacts-item:not(:last-child) {
-  margin-right: 30px;
-}
-.header-contacts-item {
-  color: var(--primery-text-color);
-}
-.header-contacts.link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: currentColor;
-  display: flex;
-  align-items: center;
-  transition-property: color;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-}
-.header-icon-link {
-  fill: currentColor;
-  margin-right: 10px;
-}
-
-.header-contacts.link:hover,
-.header-contacts.link:focus {
-  color: var(--accent-color);
-}
-
 /*--------styles hero--------*/
-.hero {
-  background-color: var(--hero-footer-dg-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/fon.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  max-width: 1600px;
-}
-
-.hero-title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--secondary-text-color);
-  max-width: 696px;
-  margin: 0 auto 30px auto;
-}
-.button {
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  align-items: center;
-  letter-spacing: 0.06em;
-  color: var(--secondary-text-color);
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  min-width: 200px;
-  min-height: 50px;
-  display: block;
-  margin: 0 auto;
-  transition-property: background-color;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-}
-.button:hover,
-.button:focus {
-  background-color: #188ce8;
-}
 
 /*-------styles main-----*/
-.our-advantage {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.advantage-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-.advantage-list .advantage-item {
-  display: block;
-  width: 270px;
-  margin-right: 30px;
-}
-.advantage-list .advantage-item:nth-child(4) {
-  margin-right: 0;
-}
-.advantage-item-container {
-  display: flex;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  height: 120px;
-  margin-bottom: 30px;
-  justify-content: center;
-  align-items: center;
-}
 
-.section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  color: var(--link-text-color);
-}
-.advantage {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--link-text-color);
-  margin-bottom: 10px;
-}
-.we-the-best {
-  font-size: 14px;
-  line-height: 1.71;
-}
 /*---------section about our work------------*/
-.we-can {
-  padding-bottom: 94px;
-}
-.title-we-can {
-  margin-bottom: 50px;
-}
-.we-can-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-.we-can-item {
-  position: relative;
-}
-
-.we-can-info {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  text-transform: uppercase;
-  color: var(--secondary-text-color);
-  width: 100%;
-  height: 70px;
-  padding: 27px 0;
-  background: rgba(47, 48, 58, 0.8);
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-.we-can-list .we-can-item:not(:last-child) {
-  display: block;
-  width: 370px;
-  margin-right: 30px;
-}
-.we-can-list .we-can-item:last-child {
-  display: block;
-}
 
 /*---------card-commands------------*/
 
-.section.we {
-  background-color: var(--section-dg-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.title-we {
-  margin-bottom: 50px;
-}
-.we-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.we-item {
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.we-list .we-item:not(:last-child) {
-  width: 270px;
-  margin-right: 30px;
-}
-
-.container-card {
-  padding: 30px 20px 30px 20px;
-  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
-    0px 2px 1px rgb(0 0 0 / 20%);
-  border-radius: 0px 0px 4px 4px;
-  text-align: center;
-}
-
-.team {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  color: var(--link-text-color);
-  margin-bottom: 10px;
-}
-
-.position {
-  font-size: 16px;
-  line-height: 1.19;
-  margin-bottom: 16px;
-}
-.card-icon-list {
-  display: flex;
-  justify-content: center;
-}
-.card-icon-item + .card-icon-item {
-  margin-left: 10px;
-}
-
-.card-icon-link {
-  width: 44px;
-  height: 44px;
-  background-color: var(--secondary-text-color);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #afb1b8;
-  transition-property: color, background-color;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-}
-.card-icon-link-logo {
-  fill: currentColor;
-}
-.card-icon-link:hover,
-.card-icon-link:focus {
-  background-color: var(--accent-color);
-  color: var(--secondary-text-color);
-}
 /*---------clients------------*/
-.clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.clients-title {
-  margin-bottom: 50px;
-}
-.clients-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-}
-.clients-item {
-  flex-basis: calc((100% - 180px) / 6);
-  margin-left: 30px;
-  width: 170px;
-  height: 92px;
-}
-.clients-link {
-  background-color: var(--secondary-text-color);
-  width: 100%;
-  height: 100%;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #afb1b8;
-  transition-property: color, border;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-}
-.clients-link-logo {
-  fill: currentColor;
-}
-.clients-link:hover,
-.clients-link:focus {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
-}
 
 /*---------portfolio-section------------*/
 .portfolio {
@@ -539,139 +122,6 @@ img {
 }
 
 /*------footer------*/
-.footer {
-  background-color: var(--hero-footer-dg-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
-.container-footer-address {
-  width: 231px;
-}
-
-.footer-logo > span {
-  color: var(--secondary-text-color);
-}
-.footer-logo {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.footer-item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.footer-link {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  color: rgba(255, 255, 255, 0.6);
-  transition-property: color;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-}
-.footer-link:hover,
-.footer-link:focus {
-  color: var(--secondary-text-color);
-}
-.footer-link-address {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--secondary-text-color);
-}
-.container-footer-social {
-  width: 206px;
-  margin-left: 70px;
-}
-
-.footer-text-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--secondary-text-color);
-  margin-bottom: 20px;
-}
-.footer-social-list {
-  display: flex;
-  justify-content: center;
-}
-.footer-social-item + .footer-social-item {
-  margin-left: 10px;
-}
-
-.footer-icon-link {
-  width: 44px;
-  height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition-property: background-color;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-}
-
-.footer-icon-link-logo {
-  fill: var(--secondary-text-color);
-}
-
-.footer-icon-link:hover,
-.footer-icon-link:focus {
-  background-color: var(--accent-color);
-}
-
-.container-footer-subscription {
-  width: 570px;
-  margin-left: 93px;
-}
-.subscription-form {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.email-input {
-  display: inline-block;
-  width: 358px;
-  height: 50px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-  border-radius: 4px;
-  padding-left: 16px;
-  margin-right: 12px;
-  cursor: pointer;
-}
-
-.btn-subscription-text {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--secondary-text-color);
-  margin-right: 10px;
-}
-.btn-subscription {
-  width: 200px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
 
 /*-------modal window-----*/
 .backdrop {
@@ -809,9 +259,12 @@ img {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  border-bottom: 1px solid var(--accent-color);
+  text-decoration-line: underline;
   color: var(--accent-color);
   margin-left: 3px;
+}
+.policy-icon-span {
+  margin-left: 10px;
 }
 .policy-icon {
   fill: none;
