--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,5 +14,7 @@
 @import "./layout/we-can";
 @import "./layout/card-commands";
 @import "./layout/clients";
+@import "./layout/portfolio";
 @import "./layout/footer";
 @import "./conponents/footer-subscription";
+@import "./conponents/modal";
