--- a/css/main.css
+++ b/css/main.css
@@ -81,21 +81,21 @@ body {
   color: var(--first-logo-color);
 }
 
-.header-logo > span {
-  color: #000000;
-}
-
 .header-logo {
   margin-right: 93px;
 }
 
-.footer-logo > span {
-  color: var(--secondary-text-color);
+.header-logo > span {
+  color: #000000;
 }
 
 .footer-logo {
   display: block;
   margin-bottom: 20px;
+}
+
+.footer-logo > span {
+  color: var(--secondary-text-color);
 }
 
 .section-title {
@@ -142,14 +142,13 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.card-icon-link-logo {
-  fill: currentColor;
-}
-
-.card-icon-link:hover,
-.card-icon-link:focus {
+.card-icon-link:hover, .card-icon-link:focus {
   background-color: var(--accent-color);
   color: var(--secondary-text-color);
+}
+
+.card-icon-link-logo {
+  fill: currentColor;
 }
 
 .footer-social-list {
@@ -187,13 +186,12 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.footer-icon-link-logo {
-  fill: var(--secondary-text-color);
+.footer-icon-link:hover, .footer-icon-link:focus {
+  background-color: var(--accent-color);
 }
 
-.footer-icon-link:hover,
-.footer-icon-link:focus {
-  background-color: var(--accent-color);
+.footer-icon-link-logo {
+  fill: var(--secondary-text-color);
 }
 
 .header {
@@ -246,6 +244,10 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
+.nav-link:hover, .nav-link:focus {
+  color: var(--accent-color);
+}
+
 .current {
   color: var(--accent-color);
 }
@@ -263,11 +265,6 @@ body {
   border-radius: 2px;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-}
-
 .header-contacts.list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -275,12 +272,12 @@ body {
   margin-left: auto;
 }
 
-.header-contacts-item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .header-contacts-item {
   color: var(--primery-text-color);
+}
+
+.header-contacts-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .header-contacts.link {
@@ -303,14 +300,13 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
+.header-contacts.link:hover, .header-contacts.link:focus {
+  color: var(--accent-color);
+}
+
 .header-icon-link {
   fill: currentColor;
   margin-right: 10px;
-}
-
-.header-contacts.link:hover,
-.header-contacts.link:focus {
-  color: var(--accent-color);
 }
 
 .hero {
@@ -366,8 +362,7 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.button:hover,
-.button:focus {
+.button:hover, .button:focus {
   background-color: #188ce8;
 }
 
@@ -440,6 +435,16 @@ body {
       flex-wrap: wrap;
 }
 
+.we-can-list .we-can-item:not(:last-child) {
+  display: block;
+  width: 370px;
+  margin-right: 30px;
+}
+
+.we-can-list .we-can-item:last-child {
+  display: block;
+}
+
 .we-can-item {
   position: relative;
 }
@@ -460,16 +465,6 @@ body {
   bottom: 0;
 }
 
-.we-can-list .we-can-item:not(:last-child) {
-  display: block;
-  width: 370px;
-  margin-right: 30px;
-}
-
-.we-can-list .we-can-item:last-child {
-  display: block;
-}
-
 .section.we {
   background-color: var(--section-dg-color);
   padding-top: 94px;
@@ -488,16 +483,16 @@ body {
       flex-wrap: wrap;
 }
 
+.we-list .we-item:not(:last-child) {
+  width: 270px;
+  margin-right: 30px;
+}
+
 .we-item {
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-.we-list .we-item:not(:last-child) {
-  width: 270px;
-  margin-right: 30px;
 }
 
 .container-card {
@@ -569,14 +564,13 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.clients-link-logo {
-  fill: currentColor;
-}
-
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   color: var(--accent-color);
   border: 1px solid var(--accent-color);
+}
+
+.clients-link-logo {
+  fill: currentColor;
 }
 
 .portfolio {
@@ -594,6 +588,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.filter-list .filter-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .button-portfolio {
@@ -619,12 +617,7 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.filter-list .filter-item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.filter-list .button-portfolio:hover,
-.filter-list .button-portfolio:focus {
+.button-portfolio:hover, .button-portfolio:focus {
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -723,8 +716,7 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.card-link:hover,
-.card-link:focus {
+.card-link:hover, .card-link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -765,8 +757,7 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.footer-link:hover,
-.footer-link:focus {
+.footer-link:hover, .footer-link:focus {
   color: var(--secondary-text-color);
 }
 
@@ -960,6 +951,15 @@ body {
   cursor: pointer;
 }
 
+.form-input:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+.form-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
 .form-field-comment {
   margin-bottom: 20px;
 }
@@ -980,18 +980,9 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.form-input:focus {
-  border-color: var(--accent-color);
-  outline: none;
-}
-
 .form-text:focus {
   border-color: var(--accent-color);
   outline: none;
-}
-
-.form-input:focus + .input-icon {
-  fill: var(--accent-color);
 }
 
 .form-field-policy {
@@ -1038,12 +1029,12 @@ body {
   margin-left: 3px;
 }
 
-.policy-icon-span {
-  margin-left: 10px;
-}
-
 .policy-icon {
   fill: none;
+}
+
+.policy-icon-span {
+  margin-left: 10px;
 }
 
 .policy-check:checked + .check-text span {
@@ -1080,8 +1071,7 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.button-submit:hover,
-.button-submit:focus {
+.button-submit:hover, .button-submit:focus {
   background-color: #188ce8;
 }
 
@@ -1115,12 +1105,11 @@ body {
           transition-timing-function: var(--transition-function);
 }
 
-.modal-icon {
-  fill: currentColor;
+.modal-close:hover, .modal-close:focus {
+  color: var(--accent-color);
 }
 
-.modal-close:hover,
-.modal-close:focus {
-  color: var(--accent-color);
+.modal-icon {
+  fill: currentColor;
 }
 /*# sourceMappingURL=main.css.map */
