--- a/sass/conponents/_sosial-icon.scss
+++ b/sass/conponents/_sosial-icon.scss
@@ -18,14 +18,14 @@
   transition-property: color, background-color;
   transition-duration: var(--transition-time);
   transition-timing-function: var(--transition-function);
-}
-.card-icon-link-logo {
-  fill: currentColor;
-}
-.card-icon-link:hover,
-.card-icon-link:focus {
-  background-color: var(--accent-color);
-  color: var(--secondary-text-color);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: var(--secondary-text-color);
+  }
+  &-logo {
+    fill: currentColor;
+  }
 }
 
 .footer-social-list {
@@ -47,13 +47,11 @@
   transition-property: background-color;
   transition-duration: var(--transition-time);
   transition-timing-function: var(--transition-function);
-}
-
-.footer-icon-link-logo {
-  fill: var(--secondary-text-color);
-}
-
-.footer-icon-link:hover,
-.footer-icon-link:focus {
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
+  &-logo {
+    fill: var(--secondary-text-color);
+  }
 }
