--- a/sass/layout/_card-commands.scss
+++ b/sass/layout/_card-commands.scss
@@ -9,6 +9,10 @@
 .we-list {
   display: flex;
   flex-wrap: wrap;
+  & .we-item:not(:last-child) {
+    width: 270px;
+    margin-right: 30px;
+  }
 }
 
 .we-item {
@@ -16,11 +20,6 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-.we-list .we-item:not(:last-child) {
-  width: 270px;
-  margin-right: 30px;
 }
 
 .container-card {
