--- a/sass/layout/_header-nav.scss
+++ b/sass/layout/_header-nav.scss
@@ -21,21 +21,21 @@
   transition-property: color;
   transition-duration: var(--transition-time);
   transition-timing-function: var(--transition-function);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .current {
   color: var(--accent-color);
-}
-.current::after {
-  content: "";
-  display: flex;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  position: absolute;
-  bottom: 0;
-  border-radius: 2px;
-}
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
+  &::after {
+    content: "";
+    display: flex;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    position: absolute;
+    bottom: 0;
+    border-radius: 2px;
+  }
 }
