--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -45,8 +45,8 @@
   transition-property: background-color;
   transition-duration: var(--transition-time);
   transition-timing-function: var(--transition-function);
-}
-.button:hover,
-.button:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
