--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -2,17 +2,17 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.filter-list {
+.filter {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 50px;
   justify-content: center;
-  & .filter-item:not(:last-child) {
+  & .filter__item:not(:last-child) {
     margin-right: 8px;
   }
 }
 
-.button-portfolio {
+.filter__button {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -38,31 +38,43 @@
   }
 }
 
-.card-img {
+.card__img {
   display: block;
   width: 100%;
 }
-.card-list {
+.card {
   display: flex;
   flex-wrap: wrap;
   margin-left: calc(-1 * var(--card-set-gap));
   margin-top: calc(-1 * var(--card-set-gap));
   list-style: none;
-  & > .card-item {
+  & > .card__item {
     flex-basis: calc((100% - 90px) / 3);
     margin-left: var(--card-set-gap);
     margin-top: var(--card-set-gap);
   }
 }
 
-.card-item:hover .card-text {
+.card__item:hover .card__text {
   transform: translateY(0);
 }
-.card-item-container {
+
+.card__link {
+  display: block;
+  transition-property: box-shadow;
+  transition-duration: var(--transition-time);
+  transition-timing-function: var(--transition-function);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+}
+.card__container {
   position: relative;
   overflow: hidden;
 }
-.card-text {
+.card__text {
   position: absolute;
   top: 0%;
   left: 0%;
@@ -78,13 +90,13 @@
   transition-duration: var(--transition-time);
   transition-timing-function: var(--transition-function);
 }
-.card-container {
+.card__container-description {
   padding: 20px 24px 20px 24px;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
   border-top: 0;
 }
-.portfolio-title {
+.card__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -92,19 +104,8 @@
   color: var(--link-text-color);
   margin-bottom: 4px;
 }
-.portfolio-signatures {
+.card__signatures {
   font-size: 16px;
   line-height: 1.87;
   color: var(--primery-text-color);
-}
-.card-link {
-  display: block;
-  transition-property: box-shadow;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
 }
