--- a/sass/conponents/_logo.scss
+++ b/sass/conponents/_logo.scss
@@ -6,14 +6,14 @@
   color: var(--first-logo-color);
 }
 
-.header-logo {
+.header__logo {
   margin-right: 93px;
   & > span {
     color: #000000;
   }
 }
 
-.footer-logo {
+.footer__logo {
   display: block;
   margin-bottom: 20px;
   & > span {
