--- a/sass/conponents/_sosial-icon.scss
+++ b/sass/conponents/_sosial-icon.scss
@@ -1,12 +1,12 @@
-.social-list {
+.social {
   display: flex;
   justify-content: center;
 }
-.social-item + .social-item {
+.social__item + .social__item {
   margin-left: 10px;
 }
 
-.card-icon-link {
+.social__link {
   background-color: var(--secondary-text-color);
   @include icon-link;
   color: #afb1b8;
@@ -20,14 +20,15 @@
   }
 }
 
-.footer-icon-link {
+.social__footer-link {
   background-color: rgba(255, 255, 255, 0.1);
   @include icon-link;
   &:hover,
   &:focus {
     background-color: var(--accent-color);
   }
-  &-logo {
-    fill: var(--secondary-text-color);
-  }
+}
+
+.social__footer-logo {
+  fill: var(--secondary-text-color);
 }
