--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -1,12 +1,15 @@
-.our-advantage {
+.advantage {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.advantage-list {
+.advantage__title {
+  @include section-title;
+}
+.advantage__list {
   display: flex;
   flex-wrap: wrap;
 }
-.advantage-list .advantage-item {
+.advantage__list .advantage__item {
   display: block;
   width: 270px;
   margin-right: 30px;
@@ -15,7 +18,7 @@
   }
 }
 
-.advantage-item-container {
+.advantage__item-container {
   display: flex;
   background-color: #f5f4fa;
   border-radius: 4px;
@@ -25,7 +28,7 @@
   align-items: center;
 }
 
-.advantage {
+.advantage__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -33,7 +36,7 @@
   color: var(--link-text-color);
   margin-bottom: 10px;
 }
-.we-the-best {
+.advantage__description {
   font-size: 14px;
   line-height: 1.71;
 }
