--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,15 +1,16 @@
 .clients {
   padding-top: 94px;
   padding-bottom: 94px;
-  &-title {
+  &__title {
     margin-bottom: 50px;
+    @include section-title;
   }
-  &-list {
+  &__list {
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
   }
-  &-item {
+  &__item {
     flex-basis: calc((100% - 180px) / 6);
     margin-left: 30px;
     width: 170px;
@@ -17,7 +18,7 @@
   }
 }
 
-.clients-link {
+.clients__link {
   background-color: var(--secondary-text-color);
   width: 100%;
   height: 100%;
@@ -35,7 +36,8 @@
     color: var(--accent-color);
     border: 1px solid var(--accent-color);
   }
-  &-logo {
-    fill: currentColor;
-  }
+}
+
+.clients__logo {
+  fill: currentColor;
 }
