--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,15 +7,22 @@
   display: flex;
   align-items: baseline;
 }
-.container-footer-address {
+.container__address {
   width: 231px;
 }
 
-.footer-item:not(:last-child) {
+.addres__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer-link {
+.addres__link-map {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--secondary-text-color);
+}
+
+.addres__link {
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -29,22 +36,65 @@
   }
 }
 
-.footer-link-address {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--secondary-text-color);
-}
-.container-footer-social {
+.footer__social {
   width: 206px;
   margin-left: 70px;
 }
 
-.footer-text-title {
+.footer__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--secondary-text-color);
   margin-bottom: 20px;
+}
+
+.footer__subscription {
+  width: 570px;
+  margin-left: 93px;
+}
+.subscription__form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.subscription__email-input {
+  display: inline-block;
+  width: 358px;
+  height: 50px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding-left: 16px;
+  margin-right: 12px;
+  cursor: pointer;
+}
+
+.subscription__btn {
+  &-text {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    color: var(--secondary-text-color);
+    margin-right: 10px;
+  }
+  & {
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+  }
 }
