--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -16,7 +16,7 @@
   max-width: 1600px;
 }
 
-.hero-title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -26,7 +26,7 @@
   max-width: 696px;
   margin: 0 auto 30px auto;
 }
-.button {
+.hero__button {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
