--- a/sass/layout/_we-can.scss
+++ b/sass/layout/_we-can.scss
@@ -1,26 +1,27 @@
 .we-can {
   padding-bottom: 94px;
 }
-.title-we-can {
+.we-can__title {
   margin-bottom: 50px;
+  @include section-title;
 }
-.we-can-list {
+.we-can__list {
   display: flex;
   flex-wrap: wrap;
-  & .we-can-item:not(:last-child) {
+  & .we-can__item:not(:last-child) {
     display: block;
     width: 370px;
     margin-right: 30px;
   }
-  & .we-can-item:last-child {
+  & .we-can__item:last-child {
     display: block;
   }
 }
-.we-can-item {
+.we-can__item {
   position: relative;
 }
 
-.we-can-info {
+.we-can__info {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
