--- a/sass/conponents/_modal.scss
+++ b/sass/conponents/_modal.scss
@@ -6,13 +6,13 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms, visibility 250ms;
-}
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
-  & .modal {
-    transform: translate(-50%, -50%) scale(0.5);
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+    & .modal {
+      transform: translate(-50%, -50%) scale(0.5);
+    }
   }
 }
 
@@ -28,32 +28,35 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  &__order {
+    display: block;
+    width: 448px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px 0;
+  }
+  &__title {
+    display: block;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    color: #212121;
+    margin-bottom: 12px;
+  }
+  &__form {
+    margin-bottom: 10px;
+    &-comment {
+      margin-bottom: 20px;
+    }
+  }
 }
 
-.order-form {
-  display: block;
-  width: 448px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 40px 0;
-}
-.order-form-title {
-  display: block;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  color: #212121;
-  margin-bottom: 12px;
-}
-.form-field {
-  margin-bottom: 10px;
-}
-.input {
-  &-wrap {
+.form__ {
+  &wrap {
     position: relative;
   }
-  &-icon {
+  &icon {
     position: absolute;
     left: 12px;
     top: 50%;
@@ -61,102 +64,97 @@
     transition-duration: var(--transition-time);
     transition-timing-function: var(--transition-function);
   }
-}
-
-.label-text {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--primery-text-color);
-  display: block;
-  margin-bottom: 4px;
-}
-.form-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding-left: 40px;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-  cursor: pointer;
-  &:focus {
-    border-color: var(--accent-color);
-    outline: none;
+  &text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--primery-text-color);
+    display: block;
+    margin-bottom: 4px;
   }
-  &:focus + .input-icon {
-    fill: var(--accent-color);
+  &input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding-left: 40px;
+    transition-duration: var(--transition-time);
+    transition-timing-function: var(--transition-function);
+    cursor: pointer;
+    &:focus {
+      border-color: var(--accent-color);
+      outline: none;
+    }
+    &:focus + .form__icon {
+      fill: var(--accent-color);
+    }
   }
-}
-.form-field-comment {
-  margin-bottom: 20px;
-}
-
-.form-text {
-  width: 100%;
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding: 12px 16px;
-  resize: none;
-  display: block;
-  transition-duration: var(--transition-time);
-  transition-timing-function: var(--transition-function);
-  &:focus {
-    border-color: var(--accent-color);
-    outline: none;
+  &text-comment {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 12px 16px;
+    resize: none;
+    display: block;
+    transition-duration: var(--transition-time);
+    transition-timing-function: var(--transition-function);
+    &:focus {
+      border-color: var(--accent-color);
+      outline: none;
+    }
   }
 }
 
-.form-field-policy {
+.policy {
   margin-bottom: 30px;
-}
-.check-text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--primery-text-color);
-  display: flex;
-  align-items: center;
-}
-.check-text span {
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--link-text-color);
-  border-radius: 2px;
-  margin-right: 7px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.policy-link {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  text-decoration-line: underline;
-  color: var(--accent-color);
-  margin-left: 3px;
+  &__check-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    color: var(--primery-text-color);
+    display: flex;
+    align-items: center;
+  }
+  &__check-text span {
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--link-text-color);
+    border-radius: 2px;
+    margin-right: 7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    text-decoration-line: underline;
+    color: var(--accent-color);
+    margin-left: 3px;
+  }
+  &__icon {
+    fill: none;
+    &-span {
+      margin-left: 10px;
+    }
+  }
+  &__check {
+    &:checked + .policy__check-text span {
+      border: none;
+      background-color: var(--accent-color);
+    }
+    &:checked + .policy__check-text .policy__icon {
+      fill: var(--secondary-text-color);
+    }
+  }
 }
 
-.policy-icon {
-  fill: none;
-  &-span {
-    margin-left: 10px;
-  }
-}
-.policy-check {
-  &:checked + .check-text span {
-    border: none;
-    background-color: var(--accent-color);
-  }
-  &:checked + .check-text .policy-icon {
-    fill: var(--secondary-text-color);
-  }
-}
-.button-submit {
+.modal__button {
   width: 200px;
   height: 50px;
   font-weight: 700;
@@ -179,7 +177,7 @@
   }
 }
 
-.modal-close {
+.modal__close {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -202,6 +200,6 @@
     color: var(--accent-color);
   }
 }
-.modal-icon {
+.modal_close-icon {
   fill: currentColor;
 }
